  line indentation done by functions of the paragraph Group
  (Fridrich Strba)
- Added text highlight conversion (Fridrich Strba)
- Added page form and orientation conversion (Fridrich Strba)
- Added font colour conversion (Fridrich Strba)
- Remove span parameters from calls to openParagraph and openListElement
(William Lachance)
- Additional doxygen comments (William Lachance)

0.7.1 -> 0.7.2
- Added conversion of paragraph margins done by functions of the
  paragraph group
- Conversion of Hard-Line-Breaks (Fridrich Strba)
- Fixed bug in WP6FixedLengthGroup handling (Fridrich Strba)
- Added --callgraph to wpd2raw, and added all parameters to the 
  output (Marc Maurer)
- Fixed a bug that prevented the conversion of full justification
  (Fridrich Strba)
- wpd2foo tools properly detect if a file format is suported
  or not (Marc Maurer)
- Handle unsupported file types other than WordPerfect documents
  (like Macintosh WP2.0 documents) more gracefully (Marc Maurer)
- Added Box Drawing character set mapping (Fridrich Strba)
- Handling of hard spaces and soft hyphens (Fridrich Strba)
- Change in conversion of Deletable Hard/Soft EOL/EOC/EOP
  and handling of some single byte functions that have their
  equivalent in the EOL group (Fridrich Strba)
- Import font names properly on big endian systems (Ted Lemon)
- MSVC compiler switch (Fridrich Strba)
- Some more refactoring, sharing more code between parsers (Marc Maurer)
- Windows versioning: add a BUILDNUMBER (Fridrich Strba)
- Be more carefull to open plain text files (Marc Maurer)
- Improved error reporting when a document can not be opened (Marc Maurer)
- Fix crash when tables occurred in embedded sub-documents (William 
Lachance)
- Insert span properties immediately after opening paragraph, preventing
entire paragraphs from inheriting the properties when you (e.g.) only wanted
to bold a word (Fridrich Strba)

0.7.0 -> 0.7.1
- Fixes to the multinational character map (Fridrich Strba)