@@ -8,19 +8,22 @@ Marc Maurer <j.m.maurer@student.utwente.nl>		Main Author
 
 Contributors
 ------------
-Mark Gilbert <markgilbert@hotpop.com>			One-line Compilation Fix
-Ariya Hidayat <ariya@kde.org>				WordPerfect 6+ Extended
-							Character Mappings
 Francis J Franklin <F.J.Franklin@sheffield.ac.uk>	Build libwpd as a 
 	  	   				       	shared library
-David Mandelin <mandelin@cs.wisc.edu>			rint() function for Win32/MSVC
+Mark Gilbert <markgilbert@hotpop.com>			Compilation Fix
+Ariya Hidayat <ariya@kde.org>				WordPerfect 6+ Extended
+							Character Mappings
 Ted Lemon <mellon@fugue.com>				Tibetan Extended
 							Character Mappings
+David Mandelin <mandelin@cs.wisc.edu>			rint() function for Win32/MSVC
+Michael Meeks <michael@ximian.com>			Remove mandatory
+	      						dependancy on glib
+							and libgsf
 Michael Pritchett <MPritchett@attglobal.net>		MSVC Project Files
 Rui Miguel Silva Seabra <rms@1407.org>			original rpm spec,
 							build patches
-Fridrich Strba <fridrich.strba@bluewin.ch>		MingW build system, many feature
-							additions
+Fridrich Strba <fridrich.strba@bluewin.ch>		MingW build system, 
+	       						many feature additions
 
 Thanks
 ------
