@@ -26,7 +26,6 @@
 #ifndef WP5PARSER_H
 #define WP5PARSER_H
 
-#include <gsf/gsf-input.h>
 #include "WPXParser.h"
 
 class WPXHLListenerImpl;
